# empire

./: .gitignore  Agents.txt  Phase2.txt  PhaseIII.txt  ProjectBible.txt  README.md  adk_mcp_server.py  adk_mcp_server.py.bak  check_pydantic.py  generate_models.py  main.py  models.py  openapi.yaml  pyproject.toml  requirements.txt  simple_mcp_server.py  update_api.py  worker.py  yaml
app/: auth.py  config.py  db.py  generated_models.py  main.py  models.py
app/core/: __init__.py  agent.py  base_agent.py  communication.py  function_tool.py  memory.py  orchestrator.py  role_negotiation.py  tools.py
app/monitoring/: __init__.py  dashboard.py  monitor.py
app/routes/: __init__.py  api.py  llm.py  niche.py  website.py
app/services/: agents.py  analytics_agent.py  artifact_agent.py  autocoder_agent.py  command_agent.py  error_handler_agent.py  fastapi_mcp_tools.py  hosting_agent.py  human_in_loop_agent.py  llm_agent.py  memory_agent.py  niche_agent.py  pmo_agent.py  review_agent.py  scraper_agent.py  seo_agent.py  tools.py  website_agent.py
app/utils/: version_check.py
bach_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: architecture.md  user_manual.md
empire_routes__addendum/: analytics.py  projects.py  tasks.py  users.py  webhooks.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
routes/: __init__.py  analytics.py  api.py  llm.py  niche.py  project.py  task.py  user.py  webhook.py  website.py
tools/: backup.py  mcp_manager.py  test_e2e.py  test_llm_switching.py
(+1 files in other folders)
